--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -34,7 +34,7 @@
 
                     <div class="navbar-brand">
                         <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/1458986230-227x128.png" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="https://mobirise.com">SRI VADIVELAN STORES</a>
+                        <a class="navbar-caption" href="index.html">SRI VADIVELAN STORES</a>
                     </div>
 
                 </div>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Creator</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials4-u" style="background-image: url(assets/images/mbr.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials4-u" style="background-image: url(assets/images/mbr.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);">
     </div>
