--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Generator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -183,7 +183,7 @@
                                         <h2 class="mbr-section-title display-1">சீர்வரிசைத் திருவிழா</h2>
                                         <p class="mbr-section-lead lead">கட்டில்,மெத்தை,பீரோ உட்பட 101 பொருட்கள் அடங்கிய திருமண சீர்வரிசைப் பொருட்களை ரூ.28,999/-க்கு வாங்கிச் செல்வீர்.</p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="http://srivadivelanstores.co.nr/seervarisai" target="_blank">KNOW MORE</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="http://www.nyw.io/viewer/vbid-cb15a-f5rt4wgj" target="_blank">KNOW MORE</a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -854,7 +854,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="jNk/nxgFnVamuPUzd/ODkwVhwAaZ0CmqQ4NW23j71FLexHo60YR/fKRJgoNOXWzWM2u98Wk5uQZHpcPH8qSfc7hRLzcV1abQ3OhOiCmDXDw9Gu9FkEA9gf0OTJBl4KYo" data-form-email="true">
+                    <input type="hidden" value="kD6bAcdgtq5HUZswNMtY0UhmeBiNEm2BgWD7KKfniC0yWN5ACtXd0Y4bscXelP+2NCHk8hVHy+kPMaoX2AJQ0H7RDZdsQotdrW041PL7K6fJbBY1JFjhBKVi2dkqaYR4" data-form-email="true">
 
                     
 
