create github pages

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Maker</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="6"></li><li data-app-prevent-settings="" data-target="#slider3-c" class="" data-slide-to="7"></li>
+                    <li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="6"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="7"></li><li data-app-prevent-settings="" data-target="#slider3-c" class="" data-slide-to="8"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full active" data-bg-video-slide="false" style="background-image: url(assets/images/quality-banner1-2000x693.jpg);">
@@ -184,6 +184,21 @@
                                         <p class="mbr-section-lead lead">கட்டில்,மெத்தை,பீரோ உட்பட 101 பொருட்கள் அடங்கிய திருமண சீர்வரிசைப் பொருட்களை ரூ.28,999/-க்கு வாங்கிச் செல்வீர்.</p>
 
                                         <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="http://www.nyw.io/viewer/vbid-8ffb5-yxvnjjnf">KNOW MORE</a> </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div><div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full" data-bg-video-slide="false" style="background-image: url(assets/images/vgpcopperbeakers-onshelf.jpg);">
+                        <div class="mbr-table-cell">
+                            <div class="mbr-overlay"></div>
+                            <div class="container-slide container">
+                                
+                                <div class="row">
+                                    <div class="col-md-8 col-md-offset-2 text-xs-center">
+                                        <h2 class="mbr-section-title display-1">செம்பு பாத்திரங்கள்&nbsp;</h2>
+                                        <p class="mbr-section-lead lead">உடல் நலத்திற்கு மிகவும் உகந்த செம்பு பாத்திரங்கள் அனைத்தும் மிகக் குறைந்த விலையில் கிடைக்கும்</p>
+
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="http://www.nyw.io/viewer/vbid-9423d-4mottkab">KNOW MORE</a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -854,7 +869,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="TSJb+/MuZlSyodDlsHmsDUdMcHBxFrIMo9XNi6XsAVVHf6yNEX6wkAH/KN1M5sHuLCxtC5lnGfo3YmLfGWe6sO+7bOHVENofXsk5mbWRZUiM2MGmkl6aF5zcVKZ0yuWi" data-form-email="true">
+                    <input type="hidden" value="oOteT1xodvWQGcO80sq6TR9sNSp+SLA9vs7J/VlhA9UxdqDQSMJSNGqvbkv3YJ9OCTSpIrQOtGNkHy/PiBx73Qpg+UaBs2hZHvTSkSEmvxD99k2ZjG8B6AkD6tDc6EJv" data-form-email="true">
 
                     
 
