--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -188,7 +188,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div><div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full" data-bg-video-slide="false" style="background-image: url(assets/images/vgpcopperbeakers-onshelf.jpg);">
+                    </div><div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full" data-bg-video-slide="false" style="background-image: url(assets/images/vgpcopperbeakers-onshelf-1.jpg);">
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide container">
@@ -869,7 +869,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="oOteT1xodvWQGcO80sq6TR9sNSp+SLA9vs7J/VlhA9UxdqDQSMJSNGqvbkv3YJ9OCTSpIrQOtGNkHy/PiBx73Qpg+UaBs2hZHvTSkSEmvxD99k2ZjG8B6AkD6tDc6EJv" data-form-email="true">
+                    <input type="hidden" value="zPTKGBjbg3kYDSSeegGYVGaIylAbhE6RKiyfEaTai+jeAnDvP1DMxc83l/OETYy8becNR2rmLczPnj9/seqSroOW6BCXjTrpk3PCDwCI1wsGZgp/LZKFEt4HTQYnqLfv" data-form-email="true">
 
                     
 
