create github pages

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                     <div class="navbar-brand">
                         <a href="index.html" class="navbar-logo"><img src="assets/images/1458986230-227x128.png" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="index.html">SRI VADIVELAN STORES</a>
+                        <a class="navbar-caption" href="index.html"></a>
                     </div>
 
                 </div>
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">WELCOME</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#header2-2">A SHORT INTRO</a><a class="dropdown-item" href="index.html#header6-3">MORE ABOUT US</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#header3-11" aria-expanded="false">GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="index.html#contacts3-w" aria-expanded="false">CONTACTUS</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-e" aria-expanded="false">PRODUCTS</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#header3-i" aria-expanded="false" data-toggle="dropdown-submenu">OUR SHOWROOM</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box8-v">SPECIAL OFFERS</a><a class="dropdown-item" href="http://srivadivelanstoresourshowroom.tk/" target="_blank">OUR SHOWROOM DETAILS</a><a class="dropdown-item" href="index.html#header3-i">ADVANTAGES OF OUR SHOWROOM</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger-outline btn-danger" href="#top">HOME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">WELCOME</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#header2-2">A SHORT INTRO</a><a class="dropdown-item" href="index.html#header6-3">MORE ABOUT US</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#header3-11" aria-expanded="false">GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="index.html#contacts3-w" aria-expanded="false">CONTACTUS</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-e" aria-expanded="false">PRODUCTS</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#header3-i" aria-expanded="false" data-toggle="dropdown-submenu">OUR SHOWROOM</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box8-v">SPECIAL OFFERS</a><a class="dropdown-item" href="http://srivadivelanstoresourshowroom.tk/" target="_blank">OUR SHOWROOM DETAILS</a><a class="dropdown-item" href="index.html#header3-i">ADVANTAGES OF OUR SHOWROOM</a></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="index.html#header3-i" aria-expanded="true" data-toggle="dropdown-submenu">MORE</a><div class="dropdown-menu"><a class="dropdown-item" href="http://www.nyw.io/viewer/vbid-c0183-88pawerm">BULK ORDERS</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger-outline btn-danger" href="#top">HOME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -869,7 +869,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="zPTKGBjbg3kYDSSeegGYVGaIylAbhE6RKiyfEaTai+jeAnDvP1DMxc83l/OETYy8becNR2rmLczPnj9/seqSroOW6BCXjTrpk3PCDwCI1wsGZgp/LZKFEt4HTQYnqLfv" data-form-email="true">
+                    <input type="hidden" value="oUG5Hqj1d2jFYJv0V33CIy5mEGNgh7sjxX2QAZwQxwhkZB0kfixWwSBCTzwA77zJ6aE5vpzbTAzRZuicbljG6S/L6XSsSiOfQ0dMKPNzC9W2KTROp5oDW2UjJkOfwoKD" data-form-email="true">
 
                     
 
