create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Generator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -198,7 +198,7 @@
                                         <h2 class="mbr-section-title display-1">செம்பு பாத்திரங்கள்&nbsp;</h2>
                                         <p class="mbr-section-lead lead">உடல் நலத்திற்கு மிகவும் உகந்த செம்பு பாத்திரங்கள் அனைத்தும் மிகக் குறைந்த விலையில் கிடைக்கும்</p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="http://www.nyw.io/viewer/vbid-9423d-4mottkab">KNOW MORE</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="http://srivadivelanstorescopper.tk">KNOW MORE</a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -744,7 +744,7 @@
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">SPECIAL OFFERS</h3>
                 <div class="lead"><p>Sri Vadivelan Stores announce special offers often. Please be in touch with us and do not miss those attractive offers. To know our latest offers/schems</p></div>
-                <div><a class="btn btn-secondary" href="http://srivadivelanstores.blogspot.in/" target="_blank">CLICK HERE</a></div>
+                <div><a class="btn btn-secondary" href="http://srivadivelanstoressploffers.tk">CLICK HERE</a></div>
             </div>
         </div>
     </div>
@@ -869,7 +869,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="qeyEQm7rTeuhSEQbZmDVka4+FsOvkdEKpvmr452R44MFkQ8Hf/RdZO3l4+l2vgtcZCAE8Qp2Xu5ROjHv2c8Xxk2Cm2H9i7Av+ewjza4Fkw+105cXyoMAd6kHol8fkAHv" data-form-email="true">
+                    <input type="hidden" value="0kpbsggaw8egQljUO7Kd4o2SHjRntEvUulvyYj14pGpr5EgbEFptpRGYl5XijM9Cbf6Zsz/2m7w8dASEP6pPCh75Q7vWkXi2Bvfpo5efcnh1JjPk/zZBlmt8MhKWaGQy" data-form-email="true">
 
                     
 
