--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">WELCOME</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#header2-2">A SHORT INTRO</a><a class="dropdown-item" href="index.html#header6-3">MORE ABOUT US</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#header3-11" aria-expanded="false">GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="index.html#contacts3-w" aria-expanded="false">CONTACTUS</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-e" aria-expanded="false">PRODUCTS</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#header3-i" aria-expanded="false" data-toggle="dropdown-submenu">OUR SHOWROOM</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box8-v">SPECIAL OFFERS</a><a class="dropdown-item" href="http://srivadivelanstoresourshowroom.tk/" target="_blank">OUR SHOWROOM DETAILS</a><a class="dropdown-item" href="index.html#header3-i">ADVANTAGES OF OUR SHOWROOM</a></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="index.html#header3-i" aria-expanded="true" data-toggle="dropdown-submenu">MORE</a><div class="dropdown-menu"><a class="dropdown-item" href="http://www.nyw.io/viewer/vbid-c0183-88pawerm">BULK ORDERS</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger-outline btn-danger" href="#top">HOME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">WELCOME</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#header2-2">A SHORT INTRO</a><a class="dropdown-item" href="index.html#header6-3">MORE ABOUT US</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#header3-11" aria-expanded="false">GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="index.html#contacts3-w" aria-expanded="false">CONTACTUS</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-e" aria-expanded="false">PRODUCTS</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#header3-i" aria-expanded="false" data-toggle="dropdown-submenu">OUR SHOWROOM</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box8-v">SPECIAL OFFERS</a><a class="dropdown-item" href="http://srivadivelanstoresourshowroom.tk/" target="_blank">OUR SHOWROOM DETAILS</a><a class="dropdown-item" href="index.html#header3-i">ADVANTAGES OF OUR SHOWROOM</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#header3-i" aria-expanded="false" data-toggle="dropdown-submenu">MORE</a><div class="dropdown-menu"><a class="dropdown-item" href="http://www.nyw.io/viewer/vbid-c0183-88pawerm">BULK ORDERS</a></div></li><li class="nav-item"><a class="nav-link link" href="http://www.nyw.io/viewer/vbid-67ff0-ojqdlra3" aria-expanded="false">ADMIN</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger-outline btn-danger" href="#top">HOME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Creator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -884,7 +884,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="HbRTgEKFLbt5x4FsL7lFLFufX/j3RVMjncoIMLE04DRIgvotiDd9c57GdmntvWF4FvKNt0Wrt0Wsg242eWcGH77ng9ERDCkosPlzpONU4xR4+PqQQhfAFPrcVrq6Q8Ek" data-form-email="true">
+                    <input type="hidden" value="j0cu1s//ce+kv564cpPSeanBm9rOIT3e/DtzZMjP0eZl8CHjbbvO0GBTlWAPD8xyi9uU8HniyXRs+QSxqFevH44ZnDbNrhMeuIJqpzpMpO2ncu+RZbTdm7z7QxuOTQDU" data-form-email="true">
 
                     
 
