create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Creator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -870,8 +870,8 @@
 
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
-                <h4>Go To</h4>
-                <ul><li>Introduction</li><li>About Us</li><li>Products we Offer</li><li>Advantages of SVS</li><li>Special Offers</li></ul>
+                <h4></h4>
+                <ul>SVS@2017</ul>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <p><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>Landline Number</strong></span></font><br>Landline: 04175-227990<br><br><br><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>Contact Person</strong></span></font><br>A.Vivekanandan<br>(Sales)<br>9629110231</p>
@@ -884,7 +884,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="j0cu1s//ce+kv564cpPSeanBm9rOIT3e/DtzZMjP0eZl8CHjbbvO0GBTlWAPD8xyi9uU8HniyXRs+QSxqFevH44ZnDbNrhMeuIJqpzpMpO2ncu+RZbTdm7z7QxuOTQDU" data-form-email="true">
+                    <input type="hidden" value="cWPpd/vctnK+xSR9ls7h+m2aFoM7gJLzjJaIVxO4xZyRhfGFE9ahoMvxhd+PMaO6rvV2dv2B3oH7+Kbkc53Aa6P4u1updjD6qdM3ghRDlVK4Usd4tzOcewA6qpKr98sS" data-form-email="true">
 
                     
 
@@ -923,7 +923,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">PLEASE CLOSE THIS TAB/WINDOW AFTER GOING THROUGH<br>Copyright (c) 2017Sri Vadivelan Stores</p>
+        <p class="text-xs-center"><span style="font-size: 0.8125rem; line-height: 1.5;">Copyright (c) 2017Sri Vadivelan Stores</span><br></p>
     </div>
 </footer>
 
